--- a/taifirebase.json
+++ b/taifirebase.json
@@ -4,43 +4,44 @@
 			"Image": "http://medifoods.my/wp-content/uploads/2015/03/cover-menu-fingerfoods2.jpg",
 			"Name": "Soda and Juice"
 		},
-		"01": {
+		"02": {
 			"Image": "http://medifoods.my/wp-content/uploads/2015/03/cover-menu-westernsoup1.jpg",
 			"Name": "Coffee and Tea"
 		},
-		"01": {
+		"03": {
 			"Image": "http://medifoods.my/wp-content/uploads/2015/03/cover-menu-easternsoup.jpg",
 			"Name": "Other Drinks"
 		},
-		"01": {
+		"04": {
 			"Image": "http://medifoods.my/wp-content/uploads/2015/03/cover-menu-sandwich.jpg",
 			"Name": "Snacks"
 		},
-		"01": {
+		"05": {
 			"Image": "http://medifoods.my/wp-content/uploads/2015/03/cover-menu-pizza.jpg",
 			"Name": "Fruits and Vegetables"
 		},
-		"01": {
+		"06": {
 			"Image": "http://medifoods.my/wp-content/uploads/2015/03/cover-menu-pasta1.jpg",
 			"Name": "Frozen Foods"
 		},
-		"01": {
+		"07": {
 			"Image": "http://medifoods.my/wp-content/uploads/2015/03/cover-menu-chicken.jpg",
 			"Name": "Office Supplies"
 		},
-		"01": {
+		"08": {
 			"Image": "http://medifoods.my/wp-content/uploads/2015/03/cover-menu-fish.jpg",
 			"Name": "Medicine"
 		},
-		"01": {
+		"09": {
 			"Image": "http://medifoods.my/wp-content/uploads/2015/03/cover-menu-vegetarian.jpg",
 			"Name": "Cleaning Supplies"
 		},
-		"01": {
+		"10": {
 			"Image": "http://medifoods.my/wp-content/uploads/2015/03/cover-menu-delights.jpg",
 			"Name": "Hygiene"
-		},
-		"Items": {
+		}
+	},
+		"Foods": {
 			"01": {
 				"Description": "descriptionhere",
 				"Discount": "1.00",
@@ -1640,14 +1641,7 @@
 				"MenuID": "1",
 				"Name": "ItemNameHere",
 				"Price": "0.00"
-			},
-			"Orders": {
-				"Order1": {
-					"Date": "01/01/17",
-					"orderList": "itemID1, itemID2",
-					"userID": "googleUserID"
-				}
 			}
 		}
-	}
+	
 }
