solved syntax error

--- a/taifirebase.json
+++ b/taifirebase.json
@@ -557,7 +557,7 @@
     "65" : {
       "Description" : "BUSH's Garbanzo Beans",
       "Discount" : "0.00",
-      "Image" : https://firebasestorage.googleapis.com/v0/b/myfirebase-87f14.appspot.com/o/Snacks%2Fbushs%20garbanzo%20beans.jpg?alt=media&token=b827dab4-5d45-48b1-9f7a-f2967eb3ef4b",
+      "Image" : "https://firebasestorage.googleapis.com/v0/b/myfirebase-87f14.appspot.com/o/Snacks%2Fbushs%20garbanzo%20beans.jpg?alt=media&token=b827dab4-5d45-48b1-9f7a-f2967eb3ef4b",
       "MenuId" : "04",
       "Name" : "BUSH'S Garbanzo Beans",
       "Price" : "1.00"
